--- a/package.json
+++ b/package.json
@@ -38,9 +38,13 @@
     "@nestjs/mongoose": "10.0.6",
     "@nestjs/passport": "10.0.3",
     "@nestjs/platform-express": "10.3.8",
+    "@nestjs/platform-socket.io": "^10.3.9",
     "@nestjs/swagger": "7.3.1",
+    "@nestjs/websockets": "^10.3.9",
+    "@ssut/nestjs-sqs": "^2.2.0",
     "@types/multer-s3": "3.0.3",
     "apple-signin-auth": "1.7.6",
+    "aws-sdk": "^2.1637.0",
     "bcryptjs": "2.4.3",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
@@ -60,9 +64,11 @@
     "reflect-metadata": "0.2.2",
     "rimraf": "5.0.7",
     "rxjs": "7.8.1",
+    "socket.io": "^4.7.5",
     "source-map-support": "0.5.21",
     "swagger-ui-express": "5.0.1",
-    "twitter": "1.7.1"
+    "twitter": "1.7.1",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@commitlint/cli": "19.3.0",
