--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "google-auth-library": "9.10.0",
     "handlebars": "4.7.8",
     "mongoose": "8.4.1",
+    "mongoose-sequence": "^6.0.1",
     "ms": "2.1.3",
     "multer": "1.4.5-lts.1",
     "multer-s3": "3.0.1",
