--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
   "dependencies": {
     "@aws-sdk/client-s3": "3.583.0",
     "@aws-sdk/s3-request-presigner": "3.583.0",
-    "@nestjs/common": "10.3.8",
+    "@nestjs/common": "^10.3.8",
     "@nestjs/config": "3.2.2",
-    "@nestjs/core": "10.3.8",
+    "@nestjs/core": "^10.3.8",
     "@nestjs/jwt": "10.2.0",
     "@nestjs/mongoose": "10.0.6",
     "@nestjs/passport": "10.0.3",
@@ -44,12 +44,13 @@
     "@ssut/nestjs-sqs": "^2.2.0",
     "@types/multer-s3": "3.0.3",
     "apple-signin-auth": "1.7.6",
-    "aws-sdk": "^2.1637.0",
+    "aws-sdk": "^2.1639.0",
     "bcryptjs": "2.4.3",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
     "dotenv": "16.4.5",
     "fb": "2.0.0",
+    "fluent-ffmpeg": "^2.1.3",
     "google-auth-library": "9.10.0",
     "handlebars": "4.7.8",
     "mongoose": "8.4.1",
